# Intro-to-Linux-and-C

./: .gitignore  README.md
C/: README.md
C/C Programming in OS/: Task1.c  a.out  a1.c  a2.c  a3.c  bank.c  commands.txt  mem.c  reimann.c  results.txt  str.c  threads1.c
C/C++/: README.md
C/CSDS338_s2023/: heap_stats.c  llist.c  proc_reader.c  string_demo.c  stucts_intro.c  void_ptrs.c
C/Intermediate_C_Programming/: README.md  a.out  array_of_functions.c  functionpointer.c  pointers.c
C/Introductory/: a.out  hello.c
C/Kernighan_Ritchie/: first_code.c
C/MiscellaneousC/: README.md  logreg.c  simple_compiler.c
C/MiscellaneousC/C:C++/CLion1/: CMakeLists.txt  a1.c  a1.cpp  banker.c  library.c  library.h  lmao.c  str.c
C/MiscellaneousC/C:C++/CLion1/CSDS338/EZTASK10/: strings.c
C/MiscellaneousC/C:C++/CLion1/CSDS338/EZTASK9/: TempTime.c  fact.c
C/MiscellaneousC/C:C++/CLion1/CSDS338/Video 2/: efrag.c
C/MiscellaneousC/C:C++/CLion1/spcao/: lmfao.c  stringMem.c
C/MiscellaneousC/C:C++/CLion1/spcao/EZTASK6/: checkpass.c  q1.c  q2.c  q2_v2.c  q4.c
C/Rachel/: flow.c  hello.c  pointers.c  structs.c
C/prac1/: mem  threads1
Kernighan_Ritchie/Chapter_1/: File_Parsing.c  WordStat.c  temperature.c
Kernighan_Ritchie/Chapter_2/: ToUpperCase.c
Kernighan_Ritchie/Chapter_3/: DecimalConversion  DecimalConversion.c  IntToString  IntToString.c  StringToInt  StringToInt.c
Kernighan_Ritchie/Chapter_4/: CalcShell  Original.txt  StringPattern  StringPattern.c  Verified.txt  a3.c
Linux/Command/: CheatSheet.md
Scripts/: README.md
prac1/: str
(+71 files in other folders)
