cmake_minimum_required(VERSION 3.21)
project(CLion1 C)

set(CMAKE_C_STANDARD 99)

add_library(CLion1 library.c a1.cpp a1.c banker.c str.c spcao/lmfao.c spcao/bank.c spcao/stringMem.c spcao/EZTASK6/q1.c spcao/EZTASK6/q2.c spcao/EZTASK6/q2_v2.c spcao/EZTASK6/checkpass.c spcao/EZTASK6/checkpass.c spcao/EZTASK6/q4.c prac1/threads1.c "CSDS338/Video 2/efrag.c" prac1/str.c prac1/mem.c CSDS338/EZTASK9/TempTime.c CSDS338/EZTASK9/fact.c CSDS338/EZTASK10/strings.c)
